1.9.2
* Clirent/textUI: "balance" command lists mempool transaction related to the given address
* Client: start it with "-b" switch to check the balances while loading UTXO.db
* Client/WebUI: POST to "balance.json?rawtx" returns the raw (originating) transaction for each output
* Wallet: Fix: "-f" was substracting the fee from every output's value, not only the first one
* Client: Changed/fixed the way how own txs are inserted into mempool (e.g. it wasn't updating SpentOutputs)
* Client/WebUI/Wallet: Show unconfirmed transactions
* Client/WebUI/MakeTx: pay_cmd inside will not apply changes to the balance folder
* Client: changed the way freshly mined txs are removed from mempool so it also works for reorgs
* Client/WebUI/Network: Make some extra information about the nodes switchable on/off
* Client: Show number of records (txs) while loading UTXO.db
* Client/WebUI/Blocks: Removed minimum fee from the block table. Moved to the fee stats chart, also added maximum
* Client: show progess of loading/saving balance of P2KH/P2SH addresses
* Client: removed "config.Beeps" and all the related beeping functionality
* Client/WebUI/Blocks: transactions in the fee stats can be grouped now to smooth the graph
* Client: fee stats fpor WebUI/Blocks are being saved now
* Client/WebUI: "Limit range" checkbox added to SPB graphs

1.9.1 - 2017-08-01
* Client: Removed AnySendTimeout as it was causing problems with limited UL bandwidth
* Client/WebUI: The font is set to Arial
* Client/WebUI/Network: Show how long each connection has been active and removes lest sent/rcvd command
* Client: Write new blocks and UTXO set to disk 2 seconds after the last successfull AcceptBlock()
* Client/WebUI/Blocks: The block's fee chart appears as a popup now
* Client/WebUI: Pressing ESC closes popups
* Client/WebUI: Removed Segwit related statistics
* Client/WebUI/Wallet: Show Segwit deposit addresses if segwit is active
* Client: WebUI/Blocks shows new blocks' extended fee stats